Add facebook login

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="message">Type your message</string>
     <string name="new_event">New Event</string>
     <string name="your_events">Your Events</string>
+    <string name="app_id">348086935327984</string>
     
 </resources>
